<resources>
    <string name="app_name">StepByStep</string>

    <!-- Register and Connection page -->
    <string name="registration">Inscription</string>
    <string name="connection">Connexion</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="email">E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="register">Sinscrire</string>
    <string name="connect">Se connecter</string>
    <string name="login">Vous avez déjà un compte</string>
    <string name="sign_in">Vous navez pas de compte</string>
    <string name="timer_default_time">00:00:00</string>
    <string name="timer_play"><![CDATA[>]]></string>
    <string name="timer_stop">||</string>
    <string name="timer_restart">O</string>
    <string name="title_activity_path_finder">Map</string>
    <string name="reload">Reload</string>
    <string name="image_hiding_map_view">Image hiding map view</string>
    <string name="path_generator_full">Path generator</string>
    <string name="choose_a_research_method">Choose a research method :</string>
    <string name="calories">Calories</string>
    <string name="distance">Distance</string>
    <string name="light">Light</string>
    <string name="full">Full</string>
    <string name="btn_display_path_finding_menu">|_|</string>
    <string name="age_years">Age (years)</string>
    <string name="weight_kgs">Weight (kgs)</string>
    <string name="calories_to_loose">Calories to loose</string>
    <string name="type_of_activity">Type of activity</string>
    <string name="height_cm">Height (cm)</string>
    <string name="distance_km">Distance (km)</string>
    <string name="ok">OK</string>
    <string name="activitytime">ActivityTime</string>
    <string name="mapbox_access_token">pk.eyJ1IjoicGVyaWZhbm9zIiwiYSI6ImNrbGllZ3MxajBjYW8ycG5tZHB2dWZmeXQifQ.xbzRZtNIxQsHyrySdBdCig</string>
    <string name="o">O</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="landingTitle">Amazing, let\'s begin ! </string>
    <string name="nextButton">Swipe right to continue</string>
    <string name="skip">Skip for now</string>
    <string name="namePageTitle">How should we call you?</string>
    <string name="accountNameFragmentDescription">You can chose whatever name you want.
    We\'ll keep it between you and us.</string>
    <string name="accountGenderTitle"> How do you identify yourself? </string>
    <string name="accountGenderDescription">We ask this to make sure your journey is fun,
    healthy, and balanced.</string>

    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="noBinary">Non-Binary</string>

    <string name="weight_description">This helps us to determine your BMI ( Body Mass Index )</string>
    <string name="weight_title">How much do you weight?</string>

    <string name="weight_goal_description">Select your ideal weight goal. Based on your BMI we suggest 82kg</string>
    <string name="weight_goal_title">What is your weight goal?</string>

    <string name="size_description">This helps us to determine your BMI ( Body Mass Index )</string>
    <string name="size_title">How tall are you?</string>


    <string name="accountIntensityDescription">Try to not overdo if it is your first time</string>
    <string name="accountIntensityTitle">Select your training intensity</string>

    <string name="lightButton">Light (2 run p/w)</string>
    <string name="mediumButton">Medium (3 run p/w)</string>
    <string name="intenseButton">Intense (5 run p/w)</string>

    <string name="endingTitle">You are good to go !</string>
    <string name="endButton">Let\'s get started</string>


    <string name="title_activity_login">Login</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="swipe_left_for_register">Swipe left to register</string>


    <string name="register">Register</string>
    <string name="your_name">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="adresse">Adresse</string>
    <string name="swipe_right_for_login">Swipe right to login</string>


    <!-- Register page -->

    <!-- Register and Connection page -->
    <string name="registration">Inscription</string>
    <string name="connection">Connexion</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="email">E-mail</string>
    <string name="connect">Se connecter</string>
    <string name="sign_in">Vous navez pas de compte</string>
</resources>
