<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AccountGenderFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/accountIntensityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accountIntensityTitle"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/accountIntensityDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="64dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/accountIntensityDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountIntensityTitle" />

        <Button
            android:id="@+id/lightButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="128dp"
            android:layout_marginEnd="64dp"
            android:backgroundTint="#FDFDFD"
            android:text="@string/lightButton"
            android:textColor="#606060"
            app:icon="@drawable/ic_baseline_api_24"
            app:iconGravity="start"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/accountIntensityDescription" />

        <Button
            android:id="@+id/mediumButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:backgroundTint="#FDFDFD"
            android:text="@string/mediumButton"
            android:textColor="#606060"
            app:icon="@drawable/ic_baseline_api_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lightButton" />

        <Button
            android:id="@+id/intenseButton"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="64dp"
            android:backgroundTint="#FDFDFD"
            android:text="@string/intenseButton"
            android:textColor="#606060"
            app:icon="@drawable/ic_baseline_api_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mediumButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>